<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/perf_metal_bg" 
    android:orientation="vertical">
    
    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:contentDescription="@string/splash_img_logo_desc"
        android:minHeight="96dp"
        android:minWidth="96dp"
        android:src="@drawable/final_mark_launcher_icon" />
    
    <ImageView
        android:id="@+id/splash_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/splash_img_app_name_desc"
        android:src="@drawable/app_name" />
  
    <TextView
        android:id="@+id/splash_txtv_availble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_weight="0.29"
        android:text="@string/splash_txtv_available_txt"
        android:textColor="@color/hintGrey"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="invisible" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:visibility="invisible">
        
        <ImageButton 
            android:id="@+id/splash_ibtn_amazon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/splash_ibtn_amazon_desc"
            android:background="@drawable/amazon_logo"/>
        
        <ImageButton 
            android:id="@+id/splash_ibtn_slide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/splash_ibtn_slideme_desc"
            />
        
        <ImageButton 
            android:id="@+id/splash_ibtn_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/splash_ibtn_aptoid_desc"
            />        
        
    </LinearLayout>
	
</LinearLayout>