<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linlay_mark_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <EditText
	        android:id="@+id/etxt_mark_item_name"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/mark_item_name_hint"
	        android:singleLine="true"
	        android:textSize="25sp"
	        android:layout_weight="1" 
	        android:textColor="@color/fntBlue"/>
	
	    <ImageButton
	        android:id="@+id/ibtn_mark_item_del"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="22dp"
	        android:background="@drawable/thrash_can_future"
	        android:contentDescription="@string/mark_item_del_desc"
	        android:paddingLeft="5dp"
	        android:layout_weight="0"
	        android:onClick="onClickDelItem"
	         />
	
	</LinearLayout>
	
		
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    

	    <EditText
	        android:id="@+id/etxt_mark_item_weighting" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:hint="@string/mark_item_weighting_hint"
	        android:inputType="number"	
	        android:maxLength="3"        
	        android:textColor="@color/fntBlue"/>
	    
	    <EditText 
	        android:id="@+id/etxt_mark_item_mark"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:hint="@string/mark_item_mark_hint"
	        android:inputType="number"
	        android:maxLength="3"
	        android:textColor="@color/fntBlue"/>
	    </LinearLayout>
	
</LinearLayout>
